--- a/src/sections/Testimonials/Testimonials.module.css
+++ b/src/sections/Testimonials/Testimonials.module.css
@@ -6,7 +6,7 @@
   align-items: stretch;
   background-color: #ffffff;
   position: relative;
-  padding: 2rem 1rem;
+  padding: 2rem 1rem 2rem 0;
   gap: 2rem;
   direction: rtl;
   background-image: url("/images/dots.svg");
@@ -103,7 +103,6 @@
   border-radius: 1.5rem;
   box-shadow: 0px 0px 12px 0px #bdbebf67;
   padding: 1.5rem 1.75rem;
-  margin: 0 0.5rem;
   position: relative;
   height: 14rem;
   display: flex;
